# DeepSeek-TUI

./: .cnb.yml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  TRAIN_3_RESULT.md  config.example.toml  package-lock.json  package.json
.github/: AUTHOR_MAP
.github/workflows/: ci.yml  claude.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
docs/: ARCHITECTURE.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  FLEET.md  INSTALL.md  PLUGIN_BUNDLES.md  POST_0_9_1_SEAMS.md  PROVIDERS.md  RUNTIME_API.md  RUNTIME_SIMPLIFICATION_DESIGN.md  TOOL_SURFACE.md  V0_9_0_RELEASE_ACCEPTANCE.md  public-surface-facts.json
docs/architecture/: provider-model-settings-v091.md
docs/releases/: v0.9.1-completion-ledger.md
npm/codewhale/: README.md  package.json
npm/deepseek-tui/: README.md  package.json
scripts/: mobile-smoke.sh
scripts/release/: check-versions.sh  install-dogfood.sh  prepare-release.sh  prepare-release.test.sh
web/: README.md  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  (+1 more)
workflows/: v0868_catalog_lane.workflow.js  v0868_issue_implement.workflow.js  v0868_tui_copy_lane.workflow.js  v0868_workflow_ui_lane.workflow.js
(+245 files in other folders)
